--- a/rebel_app/templates/login.html
+++ b/rebel_app/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -8,7 +9,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="image/favicon/rv.ico">
     <title>Rebel Veg!</title>
 
@@ -40,14 +40,14 @@
         }
     </style>
     <!-- Custom styles for this template -->
-    <link href="login.css" rel="stylesheet">
+    <link href="{% static 'css/login.css' %}" rel="stylesheet">
 
 </head>
 
 <body class="text-center">
 
     <form class="form-signin" id="form-login" method="POST">
-        <img class="mb-4" src="image/icons/RV.png" alt="" width="150" height="150">
+        <img class="mb-4" src="{% static 'image/icons/RV.png'%}" alt="" width="150" height="150">
         <h1 class="h3 mb-3 font-weight-normal">Ingrese sus datos</h1>
         <label for="inputEmail" class="sr-only">Email</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email" name="idEmail" required>
@@ -62,7 +62,7 @@
         <a href="register.html">¿no tiene cuenta?</a>
 
         <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
-        <a href="index2.html">Home</a>
+        <a href="/">Home</a>
     </form>
 
 
