--- a/rebel_app/static/css/somos.css
+++ b/rebel_app/static/css/somos.css
@@ -8,3 +8,15 @@ p {
     color: #FE7F88;
     background-color: transparent;
 }
+
+body {
+    background-color: rgb(0, 247, 255);
+}
+
+footer {
+    background: linear-gradient(90deg, #1c3643 0, #273b47 25%, #1e5372);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45;
+}
