--- a/rebel_app/templates/index2.html
+++ b/rebel_app/templates/index2.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block content %}   
+{% block content %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/index.css'%}">
+<link rel="shortcut icon" href="{% static 'image/favicon/rv.ico' %}">   
     <link rel="stylesheet" href="{% static 'css/index.css'%}">
 
     <!-- //header-->
