--- a/rebel_app/templates/somos.html
+++ b/rebel_app/templates/somos.html
@@ -1,25 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="somos.css">
-    <title>Rebel Veg</title>
-    <style>
-        body {
-            background-color: rgb(0, 247, 255);
-        }
-    </style>
-</head>
-
-<body>
+{% block content %}
+<link rel="stylesheet" href="{% static 'css/somos.css'%}">    
     <div>
         <p class="vacas">
             Somos una pyme autogestionada destinada a promover el veganismo mediante nuestros productos libres de todo tipo de crueldad, go vegan!
         </p>
     </div>
-</body>
-
-</html>
+{% endblock %}
