--- a/rebel_app/static/css/torta.css
+++ b/rebel_app/static/css/torta.css
@@ -4,6 +4,10 @@
 
 #footer {
     background: linear-gradient(90deg, #1c3643 0, #273b47 25%, #1e5372);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45;
 }
 
 #footer a {
