--- a/rebel_app/templates/base.html
+++ b/rebel_app/templates/base.html
@@ -39,8 +39,8 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="Tortas.html">Tortas</a>
-                            <a class="dropdown-item" href="Salados.html">Salados</a>
+                            <a class="dropdown-item" href="#">Tortas</a>
+                            <a class="dropdown-item" href="{% url 'salado' %}">Salados</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="Dulces.html">Dulces</a>
                         </div>
