--- a/rebel_app/templates/index2.html
+++ b/rebel_app/templates/index2.html
@@ -77,14 +77,14 @@
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
             <h2>Tortas</h2>
             <p>Puedes elejir nuestra variedad de ricas tortas!</p>
-            <p><a class="btn btn-secondary" href="#" role="button">Detalle &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="{% url 'temp_app:torta' %}" role="button">Detalle &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
             <h2>Salados</h2>
             <p>Puedes elejir nuestra variedad de productos salados!</p>
-            <p><a class="btn btn-secondary" href="{% url 'salado' %}" role="button">Detalle &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="{% url 'temp_app:salado' %}" role="button">Detalle &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
@@ -92,7 +92,7 @@
             <h2>Dulces</h2>
             <p>Puedes elejir nuestra variedad de productos dulces!
             </p>
-            <p><a class="btn btn-secondary" href="Dulces.html" role="button">Detalle &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="{% url 'temp_app:dulce' %}" role="button">Detalle &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
     </div>
