--- a/rebel_app/templates/modificar_prod.html
+++ b/rebel_app/templates/modificar_prod.html
@@ -6,43 +6,38 @@
 
             <div class="medium-6 cell">
                 <label>Nombre:
-                  {{form.name}}
-                </label>
+                    {{form.name}}
+                    </label>
             </div>
 
             <div class="medium-12 cell">
                 <label>Tipo:
-                  {{form.tipo_prod}}
-                </label>
+                    {{form.tipo_prod}}
+                    </label>
             </div>
 
             <div class="medium-12 cell">
                 <label>Descripcion:
-                  {{form.description}}
-                </label>
+                    {{form.description}}
+                    </label>
             </div>
 
             <div class="medium-6 cell">
                 <label>Precio:
-                  {{form.price}}
-                </label>
+                    {{form.price}}
+                    </label>
             </div>
 
             <div class="medium-12 cell">
                 <label>Foto:
-                  {{form.imagen}}
-                </label>
+                    {{form.imagen}}
+                    </label>
             </div>
 
             <div class="medium-12 cell">
-                <button type="submit" class="button success">Actualizar</button>
+                <button type="submit" class="btn btn-primary">Actualizar</button>
             </div>
         </form>
-
-
-
     </div>
 </div>
-
-
 {% endblock %}
