--- a/rebel_app/templates/Test.html
+++ b/rebel_app/templates/Test.html
@@ -1,2 +1,53 @@
- .form-signin input[type="email"] { margin-bottom: -1px; border-bottom-right-radius: 0; border-bottom-left-radius: 0; } .form-signin input[type="password"] { margin-bottom: 10px; border-top-left-radius: 0; border-top-right-radius: 0; } .form-signin .form-control:focus
-{ z-index: 2; }
+<form>
+    <div class="form-row">
+        <h1>Modificar Producto</h1>
+        <div class="form-group col-md-6">
+            <label>Nombre:
+            {{form.name}}    
+        </label>
+
+        </div>
+        <div class="form-group col-md-6">
+            <label>Tipo:
+            {{form.tipo_prod}}
+            </label>
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Descripcion:
+            {{form.description}}
+        </label>
+    </div>
+    <div class="form-group">
+        <label>Precio:
+            {{form.price}}
+        </label>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>Foto:
+            {{form.imagen}}
+        </label>
+        </div>
+        <div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <select id="inputState" class="form-control">
+          <option selected>Choose...</option>
+          <option>...</option>
+        </select>
+        </div>
+        <div class="form-group col-md-2">
+            <label for="inputZip">Zip</label>
+            <input type="text" class="form-control" id="inputZip">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+          Check me out
+        </label>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Sign in</button>
+</form>
