--- a/rebel_app/templates/delete.html
+++ b/rebel_app/templates/delete.html
@@ -1,2 +1,6 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
-< {% endblock %}
+<form method="post">
+    <H1>SE ELIMINO EL PRODUCTO CON EXITO!</H1>{% csrf_token %}
+    <button type="submit">Confirmar</button>
+</form>
+{% endblock %}
