--- a/rebel_app/templates/base.html
+++ b/rebel_app/templates/base.html
@@ -44,15 +44,15 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'temp_app:dulce' %}">Dulces</a>
                         </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Recetas</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Recetas</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{% url 'temp_app:listar_receta' %}">Lista Recetas</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'temp_app:agregar_receta' %}">Agregar Receta</a>
                         </div>
-                </li>
+                    </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -63,41 +63,38 @@
                     <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
                     <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                     <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-                </svg>
-                {% if user.is_authenticated %}
+                </svg> {% if user.is_authenticated %}
                 <div class="d-flex flex-row justify-content-around"></div>
                 <li>
-                 <a href="#">Usuario: {{user.username}} <hr></a>
+                    <a href="#">Usuario: {{user.username}} <hr></a>
                 </li>
                 <li>
-                  <a href="#">Cerrar sesión</a>
+                    <a href="">Cerrar sesión</a>
                 </li>
                 {% else %}
-                <a href="{% url 'temp_app:login' %}" class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</a>
-                {% endif %}
+                <a href="{% url 'temp_app:login' %}" class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</a> {% endif %}
             </form>
         </div>
     </nav>
 
-    {% block content %}
-    {% endblock %}
+    {% block content %} {% endblock %}
 
-        <!--footer-->
+    <!--footer-->
 
-        <footer id="footer">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-12 col-lg">
-                        <a href="{% url 'temp_app:somos' %}">¿Quienes Somos?</a>
-                    </div>
-                    <div class="col-12 col-lg">
-                        <a href="https://www.instagram.com/rebel_veg/"><img src="{% static 'image/icons/instagram2.png' %}" width="30px" height="30px"></a>
-                    </div>
-                    <div class="col-12 col-lg">
-                        <a href="{% url 'temp_app:contacto' %}">Contactanos</a>
-                    </div>
+    <footer id="footer">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-12 col-lg">
+                    <a href="{% url 'temp_app:somos' %}">¿Quienes Somos?</a>
+                </div>
+                <div class="col-12 col-lg">
+                    <a href="https://www.instagram.com/rebel_veg/"><img src="{% static 'image/icons/instagram2.png' %}" width="30px" height="30px"></a>
+                </div>
+                <div class="col-12 col-lg">
+                    <a href="{% url 'temp_app:contacto' %}">Contactanos</a>
                 </div>
             </div>
+        </div>
         </div>
     </footer>
     <!--//footer-->
