--- a/rebel_app/templates/base.html
+++ b/rebel_app/templates/base.html
@@ -37,13 +37,8 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{% url 'temp_app:torta' %}">Tortas</a>
-                            <a class="dropdown-item" href="{% url 'temp_app:salado' %}">Salados</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'temp_app:dulce' %}">Dulces</a>
-                        </div>
+                        <a class="nav-link" href="{% url 'temp_app:pedido' %}">Productos<span class="sr-only">(current)</span></a>
+
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Recetas</a>
